# IoT-at-home

./: .gitignore  README.md
_doc/parts/: README.md
_doc/parts/IR Emitter (strong1)/: datasheet.txt
_doc/parts/IR Receiver & Emitter (weak)/: datasheet.txt
_doc/parts/transister/: akizukidenshi.com:catalog:g:g106477 3.webloc  datasheet.txt
arduino-readwrite-server/: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  memo.md
arduino-readwrite-server/.devcontainer/: devcontainer.json
arduino-readwrite-server/src/: main.rs
ir_recv_emit_controller/: README.md  circuit.txt  circuitjs-2LED.txt  ir_recv_emit_controller.ino  ir_recv_emit_controller.ino.v1  utils.py
ir_recv_emit_controller/.devcontainer/: devcontainer.json
ir_recv_emit_controller/server/: .env.template  Dockerfile  Dockerfile.dev  README.md  main.py  requirements.txt
ir_recv_emit_controller/server/templates/: controller.html  index.html  ir_signal.html  layout.html  login.html
sensor/: README.md  sensor.ino
tp-link-smarthome/: README.md
