[package]
name = "arduino_serial_api"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures-util = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
